--- a/style.css
+++ b/style.css
@@ -25,3 +25,10 @@ body{
     font-weight: bold;
     margin-top: 20px;
 }
+
+#default-img{
+    margin-top: 20px;
+    margin-left: 50px;
+    width:300px;
+    height: 300px;
+}
